--- a/src/static_tf/package.xml
+++ b/src/static_tf/package.xml
@@ -4,7 +4,7 @@
   <name>static_tf</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="dthusian@todo.todo">dthusian</maintainer>
+  <maintainer email="wuadrian161@gmail.com">dthusian</maintainer>
   <license>UNLICENSED</license>
 
   <test_depend>ament_copyright</test_depend>
