--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.analysis.extraPaths": ["/opt/ros/humble/lib/python3.10/site-packages/", "/opt/ros/humble/local/lib/python3.10/dist-packages/"]
+  "python.analysis.extraPaths": ["/opt/ros/humble/lib/python3.10/site-packages/", "/opt/ros/humble/local/lib/python3.10/dist-packages/", "build/status_display_msgs/rosidl_generator_py"]
 }
